added day/night theme change

--- a/style.css
+++ b/style.css
@@ -1,14 +1,52 @@
-html{
+/*light theme*/
+.theme-light{
 	background: rgb(255, 255, 255);
 }
 
+.theme-light .titleBackgroundTheme{
+	color:#C06014; 
+}
+
+.theme-light .headTheme{
+	background:rgb(189,100,10);
+}
+
+.theme-light .headColorBackgroundTheme{
+	color:#E9E9E9;
+}
+
+.theme-light .mainTheme{
+	background-color: #E9E9E9;
+}
+
+/*dark theme*/
+.theme-dark{
+	background: rgb(32, 32, 31);
+	color: rgb(95, 93, 86);
+}
+
+.theme-dark .titleBackgroundTheme{
+	color:#42413D; 
+}
+
+.theme-dark .headTheme{
+	background:rgb(0, 0, 0);
+}
+
+.theme-dark .headColorBackgroundTheme{
+	color:#42413D;
+}
+
+.theme-dark .mainTheme{
+	background-color: rgb(32,32,31);
+}
+
 header{
-	background-color: rgb(255, 255, 255);
+	/* background-color: rgb(255, 255, 255); */
 	margin:0px;
 	padding: 0px;
 	border-bottom-style: outset;
 	/* border-radius: 10px; */
-	color: #E9E9E9;
 	text-align: left;
 	font-family: "Comic Sans MS", cursive, sans-serif;
 }
@@ -28,7 +66,6 @@ nav ul li a{
 }
 
 main{
-	background-color: #E9E9E9;
 	margin-top: 5px;
 	margin-bottom: 5px;
 	padding: 10px;
@@ -39,7 +76,6 @@ main{
 }
 
 footer{
-	background-color: rgb(255, 255, 255);
 	margin:0px;
 	padding: 0px;
 	border-top-style: outset;
