--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ main{
 	margin-top: 5px;
 	margin-bottom: 5px;
 	padding: 10px;
-	padding-left: 5%;
+	padding-left: 60px;
 	border-radius: 0px;
 	font-size: 17px;
 	font-family: "Comic Sans MS", cursive, sans-serif;
