--- a/style.css
+++ b/style.css
@@ -62,12 +62,11 @@
 	background-color: rgb(32,32,31);
 }
 
+/* formating */
 header{
-	/* background-color: rgb(255, 255, 255); */
 	margin:0px;
 	padding: 0px;
 	border-bottom-style: outset;
-	/* border-radius: 10px; */
 	text-align: left;
 	font-family: "Comic Sans MS", cursive, sans-serif;
 }
@@ -120,17 +119,13 @@ footer{
 	margin:0px;
 	padding: 0px;
 	border-top-style: outset;
-	/* border-radius: 10px; */
 	color: #000000;
 	text-align: right;
 	font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
-/* #gameplay button{
-	border: none;
-	background-color: transparent;
-	text-align: center;
-	position: absolute;
-	top: 45%;
-	left: 48%;
-} */
+/* game visability control */
+.game{
+	display : block;
+	visibility : none;
+}
